cli/tests/ui/program_conditional_when_present_invalid_source.stderr
Error: manifest::deserialize_error

  × check failed
  ╰─▶ json5 deserialize error at program.args[0].when_present: invalid
      conditional interpolation path `bindings.api.url`: expected `config`,
      `config.<path>`, `slots`, or `slots.<path>`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/program_conditional_when_present_invalid_source.json5:7:23]
 6 │       {
 7 │         when_present: "bindings.api.url",
   ·                       ─────────┬────────
   ·                                ╰── invalid conditional interpolation path `bindings.api.url`: expected `config`, `config.<path>`, `slots`, or `slots.<path>`
 8 │         argv: ["--api", "${slots.api.url}"],
   ╰────
